// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportBody renders 1`] = `
<DocumentFragment>
  <mock-bodysection>
    <mock-automatedchecksheadersection
      cardsviewdata="[object Object]"
      deps="[object Object]"
      description="test description"
      fixinstructionprocessor="undefined"
      recommendcolor="undefined"
      scanmetadata="[object Object]"
      sectionfactory="[object Object]"
      sectionheadinglevel="3"
      shouldalertfailurescount="false"
    />
    <mock-contentsection>
      <mock-automatedcheckstitlesection />
      <mock-detailssection
        cardsviewdata="[object Object]"
        deps="[object Object]"
        description="test description"
        fixinstructionprocessor="undefined"
        recommendcolor="undefined"
        scanmetadata="[object Object]"
        sectionfactory="[object Object]"
        sectionheadinglevel="3"
        shouldalertfailurescount="false"
      />
      <mock-alloutcomessummarysection
        cardsviewdata="[object Object]"
        deps="[object Object]"
        description="test description"
        fixinstructionprocessor="undefined"
        recommendcolor="undefined"
        scanmetadata="[object Object]"
        sectionfactory="[object Object]"
        sectionheadinglevel="3"
        shouldalertfailurescount="false"
      />
      <mock-resultscontainer
        cardsviewdata="[object Object]"
        deps="[object Object]"
        description="test description"
        fixinstructionprocessor="undefined"
        recommendcolor="undefined"
        scanmetadata="[object Object]"
        sectionfactory="[object Object]"
        sectionheadinglevel="3"
        shouldalertfailurescount="false"
      >
        <mock-failedinstancessection
          cardsviewdata="[object Object]"
          deps="[object Object]"
          description="test description"
          fixinstructionprocessor="undefined"
          recommendcolor="undefined"
          scanmetadata="[object Object]"
          sectionfactory="[object Object]"
          sectionheadinglevel="3"
          shouldalertfailurescount="false"
        />
        <mock-passedcheckssection
          cardsviewdata="[object Object]"
          deps="[object Object]"
          description="test description"
          fixinstructionprocessor="undefined"
          recommendcolor="undefined"
          scanmetadata="[object Object]"
          sectionfactory="[object Object]"
          sectionheadinglevel="3"
          shouldalertfailurescount="false"
        />
        <mock-notapplicablecheckssection
          cardsviewdata="[object Object]"
          deps="[object Object]"
          description="test description"
          fixinstructionprocessor="undefined"
          recommendcolor="undefined"
          scanmetadata="[object Object]"
          sectionfactory="[object Object]"
          sectionheadinglevel="3"
          shouldalertfailurescount="false"
        />
      </mock-resultscontainer>
    </mock-contentsection>
    <mock-footersection>
      <mock-footertext
        cardsviewdata="[object Object]"
        deps="[object Object]"
        description="test description"
        fixinstructionprocessor="undefined"
        recommendcolor="undefined"
        scanmetadata="[object Object]"
        sectionfactory="[object Object]"
        sectionheadinglevel="3"
        shouldalertfailurescount="false"
      />
    </mock-footersection>
  </mock-bodysection>
</DocumentFragment>
`;

exports[`ReportBody renders: allOutcomesSummarySectionProps 1`] = `
{
  "cardsViewData": {
    "allCardsCollapsed": true,
    "cards": {
      "fail": [
        {
          "description": "sample-description",
          "guidance": [
            {
              "href": "sample-guidance-href",
              "text": "sample-guidance-text",
            },
          ],
          "id": "some-rule",
          "nodes": [
            {
              "descriptors": {
                "snippet": "this is a sample snippet",
              },
              "identifiers": {
                "conciseName": "body img",
                "css-selector": "body img",
                "identifier": "body img",
              },
              "resolution": {
                "how-to-fix-web": {
                  "all": [],
                  "any": [
                    "Element does not have an alt attribute",
                    "aria-label attribute does not exist or is empty",
                    "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                  ],
                  "none": [],
                },
                "howToFixSummary": "sample how to fix summary",
              },
              "ruleId": "image-alt",
              "status": "fail",
              "uid": "some-guid-here",
            },
          ],
          "url": "sample-url",
        },
      ],
      "inapplicable": [],
      "pass": [],
      "unknown": [],
    },
    "visualHelperEnabled": true,
  },
  "deps": {},
  "description": "test description",
  "fixInstructionProcessor": [typemoq mock object],
  "getCollapsibleScript": [Function],
  "getGuidanceTagsFromGuidanceLinks": [Function],
  "recommendColor": [typemoq mock object],
  "scanMetadata": {
    "targetAppInfo": {
      "name": "app",
    },
    "timespan": {
      "scanComplete": 1900-02-02T03:00:00.000Z,
    },
    "toolData": {
      "applicationProperties": {
        "environmentName": "environmentName",
        "name": "app-name",
        "version": "app-version",
      },
      "scanEngineProperties": {
        "name": "engine-name",
        "version": "engine-version",
      },
    },
  },
  "sectionFactory": "Removed for Snapshot",
  "sectionHeadingLevel": 3,
  "shouldAlertFailuresCount": false,
  "toUtcString": [Function],
  "userConfigurationStoreData": null,
}
`;

exports[`ReportBody renders: detailsSectionProps 1`] = `
{
  "cardsViewData": {
    "allCardsCollapsed": true,
    "cards": {
      "fail": [
        {
          "description": "sample-description",
          "guidance": [
            {
              "href": "sample-guidance-href",
              "text": "sample-guidance-text",
            },
          ],
          "id": "some-rule",
          "nodes": [
            {
              "descriptors": {
                "snippet": "this is a sample snippet",
              },
              "identifiers": {
                "conciseName": "body img",
                "css-selector": "body img",
                "identifier": "body img",
              },
              "resolution": {
                "how-to-fix-web": {
                  "all": [],
                  "any": [
                    "Element does not have an alt attribute",
                    "aria-label attribute does not exist or is empty",
                    "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                  ],
                  "none": [],
                },
                "howToFixSummary": "sample how to fix summary",
              },
              "ruleId": "image-alt",
              "status": "fail",
              "uid": "some-guid-here",
            },
          ],
          "url": "sample-url",
        },
      ],
      "inapplicable": [],
      "pass": [],
      "unknown": [],
    },
    "visualHelperEnabled": true,
  },
  "deps": {},
  "description": "test description",
  "fixInstructionProcessor": [typemoq mock object],
  "getCollapsibleScript": [Function],
  "getGuidanceTagsFromGuidanceLinks": [Function],
  "recommendColor": [typemoq mock object],
  "scanMetadata": {
    "targetAppInfo": {
      "name": "app",
    },
    "timespan": {
      "scanComplete": 1900-02-02T03:00:00.000Z,
    },
    "toolData": {
      "applicationProperties": {
        "environmentName": "environmentName",
        "name": "app-name",
        "version": "app-version",
      },
      "scanEngineProperties": {
        "name": "engine-name",
        "version": "engine-version",
      },
    },
  },
  "sectionFactory": "Removed for Snapshot",
  "sectionHeadingLevel": 3,
  "shouldAlertFailuresCount": false,
  "toUtcString": [Function],
  "userConfigurationStoreData": null,
}
`;

exports[`ReportBody renders: failedInstancesSectionProps 1`] = `
{
  "cardsViewData": {
    "allCardsCollapsed": true,
    "cards": {
      "fail": [
        {
          "description": "sample-description",
          "guidance": [
            {
              "href": "sample-guidance-href",
              "text": "sample-guidance-text",
            },
          ],
          "id": "some-rule",
          "nodes": [
            {
              "descriptors": {
                "snippet": "this is a sample snippet",
              },
              "identifiers": {
                "conciseName": "body img",
                "css-selector": "body img",
                "identifier": "body img",
              },
              "resolution": {
                "how-to-fix-web": {
                  "all": [],
                  "any": [
                    "Element does not have an alt attribute",
                    "aria-label attribute does not exist or is empty",
                    "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                  ],
                  "none": [],
                },
                "howToFixSummary": "sample how to fix summary",
              },
              "ruleId": "image-alt",
              "status": "fail",
              "uid": "some-guid-here",
            },
          ],
          "url": "sample-url",
        },
      ],
      "inapplicable": [],
      "pass": [],
      "unknown": [],
    },
    "visualHelperEnabled": true,
  },
  "deps": {},
  "description": "test description",
  "fixInstructionProcessor": [typemoq mock object],
  "getCollapsibleScript": [Function],
  "getGuidanceTagsFromGuidanceLinks": [Function],
  "recommendColor": [typemoq mock object],
  "scanMetadata": {
    "targetAppInfo": {
      "name": "app",
    },
    "timespan": {
      "scanComplete": 1900-02-02T03:00:00.000Z,
    },
    "toolData": {
      "applicationProperties": {
        "environmentName": "environmentName",
        "name": "app-name",
        "version": "app-version",
      },
      "scanEngineProperties": {
        "name": "engine-name",
        "version": "engine-version",
      },
    },
  },
  "sectionFactory": "Removed for Snapshot",
  "sectionHeadingLevel": 3,
  "shouldAlertFailuresCount": false,
  "toUtcString": [Function],
  "userConfigurationStoreData": null,
}
`;

exports[`ReportBody renders: footerTextPropsProps 1`] = `
{
  "cardsViewData": {
    "allCardsCollapsed": true,
    "cards": {
      "fail": [
        {
          "description": "sample-description",
          "guidance": [
            {
              "href": "sample-guidance-href",
              "text": "sample-guidance-text",
            },
          ],
          "id": "some-rule",
          "nodes": [
            {
              "descriptors": {
                "snippet": "this is a sample snippet",
              },
              "identifiers": {
                "conciseName": "body img",
                "css-selector": "body img",
                "identifier": "body img",
              },
              "resolution": {
                "how-to-fix-web": {
                  "all": [],
                  "any": [
                    "Element does not have an alt attribute",
                    "aria-label attribute does not exist or is empty",
                    "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                  ],
                  "none": [],
                },
                "howToFixSummary": "sample how to fix summary",
              },
              "ruleId": "image-alt",
              "status": "fail",
              "uid": "some-guid-here",
            },
          ],
          "url": "sample-url",
        },
      ],
      "inapplicable": [],
      "pass": [],
      "unknown": [],
    },
    "visualHelperEnabled": true,
  },
  "deps": {},
  "description": "test description",
  "fixInstructionProcessor": [typemoq mock object],
  "getCollapsibleScript": [Function],
  "getGuidanceTagsFromGuidanceLinks": [Function],
  "recommendColor": [typemoq mock object],
  "scanMetadata": {
    "targetAppInfo": {
      "name": "app",
    },
    "timespan": {
      "scanComplete": 1900-02-02T03:00:00.000Z,
    },
    "toolData": {
      "applicationProperties": {
        "environmentName": "environmentName",
        "name": "app-name",
        "version": "app-version",
      },
      "scanEngineProperties": {
        "name": "engine-name",
        "version": "engine-version",
      },
    },
  },
  "sectionFactory": "Removed for Snapshot",
  "sectionHeadingLevel": 3,
  "shouldAlertFailuresCount": false,
  "toUtcString": [Function],
  "userConfigurationStoreData": null,
}
`;

exports[`ReportBody renders: notApplicableChecksSectionProps 1`] = `
{
  "cardsViewData": {
    "allCardsCollapsed": true,
    "cards": {
      "fail": [
        {
          "description": "sample-description",
          "guidance": [
            {
              "href": "sample-guidance-href",
              "text": "sample-guidance-text",
            },
          ],
          "id": "some-rule",
          "nodes": [
            {
              "descriptors": {
                "snippet": "this is a sample snippet",
              },
              "identifiers": {
                "conciseName": "body img",
                "css-selector": "body img",
                "identifier": "body img",
              },
              "resolution": {
                "how-to-fix-web": {
                  "all": [],
                  "any": [
                    "Element does not have an alt attribute",
                    "aria-label attribute does not exist or is empty",
                    "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                  ],
                  "none": [],
                },
                "howToFixSummary": "sample how to fix summary",
              },
              "ruleId": "image-alt",
              "status": "fail",
              "uid": "some-guid-here",
            },
          ],
          "url": "sample-url",
        },
      ],
      "inapplicable": [],
      "pass": [],
      "unknown": [],
    },
    "visualHelperEnabled": true,
  },
  "deps": {},
  "description": "test description",
  "fixInstructionProcessor": [typemoq mock object],
  "getCollapsibleScript": [Function],
  "getGuidanceTagsFromGuidanceLinks": [Function],
  "recommendColor": [typemoq mock object],
  "scanMetadata": {
    "targetAppInfo": {
      "name": "app",
    },
    "timespan": {
      "scanComplete": 1900-02-02T03:00:00.000Z,
    },
    "toolData": {
      "applicationProperties": {
        "environmentName": "environmentName",
        "name": "app-name",
        "version": "app-version",
      },
      "scanEngineProperties": {
        "name": "engine-name",
        "version": "engine-version",
      },
    },
  },
  "sectionFactory": "Removed for Snapshot",
  "sectionHeadingLevel": 3,
  "shouldAlertFailuresCount": false,
  "toUtcString": [Function],
  "userConfigurationStoreData": null,
}
`;

exports[`ReportBody renders: passedChecksSectionProps 1`] = `
{
  "cardsViewData": {
    "allCardsCollapsed": true,
    "cards": {
      "fail": [
        {
          "description": "sample-description",
          "guidance": [
            {
              "href": "sample-guidance-href",
              "text": "sample-guidance-text",
            },
          ],
          "id": "some-rule",
          "nodes": [
            {
              "descriptors": {
                "snippet": "this is a sample snippet",
              },
              "identifiers": {
                "conciseName": "body img",
                "css-selector": "body img",
                "identifier": "body img",
              },
              "resolution": {
                "how-to-fix-web": {
                  "all": [],
                  "any": [
                    "Element does not have an alt attribute",
                    "aria-label attribute does not exist or is empty",
                    "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                  ],
                  "none": [],
                },
                "howToFixSummary": "sample how to fix summary",
              },
              "ruleId": "image-alt",
              "status": "fail",
              "uid": "some-guid-here",
            },
          ],
          "url": "sample-url",
        },
      ],
      "inapplicable": [],
      "pass": [],
      "unknown": [],
    },
    "visualHelperEnabled": true,
  },
  "deps": {},
  "description": "test description",
  "fixInstructionProcessor": [typemoq mock object],
  "getCollapsibleScript": [Function],
  "getGuidanceTagsFromGuidanceLinks": [Function],
  "recommendColor": [typemoq mock object],
  "scanMetadata": {
    "targetAppInfo": {
      "name": "app",
    },
    "timespan": {
      "scanComplete": 1900-02-02T03:00:00.000Z,
    },
    "toolData": {
      "applicationProperties": {
        "environmentName": "environmentName",
        "name": "app-name",
        "version": "app-version",
      },
      "scanEngineProperties": {
        "name": "engine-name",
        "version": "engine-version",
      },
    },
  },
  "sectionFactory": "Removed for Snapshot",
  "sectionHeadingLevel": 3,
  "shouldAlertFailuresCount": false,
  "toUtcString": [Function],
  "userConfigurationStoreData": null,
}
`;

exports[`ReportBody renders: resultsContainerProps 1`] = `
{
  "cardsViewData": {
    "allCardsCollapsed": true,
    "cards": {
      "fail": [
        {
          "description": "sample-description",
          "guidance": [
            {
              "href": "sample-guidance-href",
              "text": "sample-guidance-text",
            },
          ],
          "id": "some-rule",
          "nodes": [
            {
              "descriptors": {
                "snippet": "this is a sample snippet",
              },
              "identifiers": {
                "conciseName": "body img",
                "css-selector": "body img",
                "identifier": "body img",
              },
              "resolution": {
                "how-to-fix-web": {
                  "all": [],
                  "any": [
                    "Element does not have an alt attribute",
                    "aria-label attribute does not exist or is empty",
                    "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                  ],
                  "none": [],
                },
                "howToFixSummary": "sample how to fix summary",
              },
              "ruleId": "image-alt",
              "status": "fail",
              "uid": "some-guid-here",
            },
          ],
          "url": "sample-url",
        },
      ],
      "inapplicable": [],
      "pass": [],
      "unknown": [],
    },
    "visualHelperEnabled": true,
  },
  "children": "Removed for Snapshot",
  "deps": {},
  "description": "test description",
  "fixInstructionProcessor": [typemoq mock object],
  "getCollapsibleScript": [Function],
  "getGuidanceTagsFromGuidanceLinks": [Function],
  "recommendColor": [typemoq mock object],
  "scanMetadata": {
    "targetAppInfo": {
      "name": "app",
    },
    "timespan": {
      "scanComplete": 1900-02-02T03:00:00.000Z,
    },
    "toolData": {
      "applicationProperties": {
        "environmentName": "environmentName",
        "name": "app-name",
        "version": "app-version",
      },
      "scanEngineProperties": {
        "name": "engine-name",
        "version": "engine-version",
      },
    },
  },
  "sectionFactory": "Removed for Snapshot",
  "sectionHeadingLevel": 3,
  "shouldAlertFailuresCount": false,
  "toUtcString": [Function],
  "userConfigurationStoreData": null,
}
`;

exports[`ReportBody renders: sectionProps 1`] = `
{
  "cardsViewData": {
    "allCardsCollapsed": true,
    "cards": {
      "fail": [
        {
          "description": "sample-description",
          "guidance": [
            {
              "href": "sample-guidance-href",
              "text": "sample-guidance-text",
            },
          ],
          "id": "some-rule",
          "nodes": [
            {
              "descriptors": {
                "snippet": "this is a sample snippet",
              },
              "identifiers": {
                "conciseName": "body img",
                "css-selector": "body img",
                "identifier": "body img",
              },
              "resolution": {
                "how-to-fix-web": {
                  "all": [],
                  "any": [
                    "Element does not have an alt attribute",
                    "aria-label attribute does not exist or is empty",
                    "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                  ],
                  "none": [],
                },
                "howToFixSummary": "sample how to fix summary",
              },
              "ruleId": "image-alt",
              "status": "fail",
              "uid": "some-guid-here",
            },
          ],
          "url": "sample-url",
        },
      ],
      "inapplicable": [],
      "pass": [],
      "unknown": [],
    },
    "visualHelperEnabled": true,
  },
  "deps": {},
  "description": "test description",
  "fixInstructionProcessor": [typemoq mock object],
  "getCollapsibleScript": [Function],
  "getGuidanceTagsFromGuidanceLinks": [Function],
  "recommendColor": [typemoq mock object],
  "scanMetadata": {
    "targetAppInfo": {
      "name": "app",
    },
    "timespan": {
      "scanComplete": 1900-02-02T03:00:00.000Z,
    },
    "toolData": {
      "applicationProperties": {
        "environmentName": "environmentName",
        "name": "app-name",
        "version": "app-version",
      },
      "scanEngineProperties": {
        "name": "engine-name",
        "version": "engine-version",
      },
    },
  },
  "sectionFactory": "Removed for Snapshot",
  "sectionHeadingLevel": 3,
  "shouldAlertFailuresCount": false,
  "toUtcString": [Function],
  "userConfigurationStoreData": null,
}
`;
